✨ feat(admin): add project delete cleanup
